apply project layout, fix some errors
